--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h3 class="logo"><a href="index.html">Eesha  babar</a></h3>
+      <h3 class="logo"><a href="index.html">Eesha</a></h3>
 
 
       <nav id="navbar" class="navbar">
@@ -69,6 +69,23 @@
 
   <main id="main">
 
+    <style>
+  /* Global font style for the whole website */
+  body {
+    font-family: Georgia, serif;   /* Change font here */
+    font-size: 16px;
+    line-height: 1.6;
+    color: #222;                  /* Softer black for readability */
+    text-align: justify;          /* Makes all text justified */
+  }
+
+  /* Optional: stronger headings for better contrast */
+  h1, h2, h3, h4, h5, h6 {
+    font-family: Georgia, serif;  /* Keep same font or set a different one */
+    font-weight: bold;
+  }
+</style>
+
     <!-- ======= About Section ======= -->
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
@@ -89,28 +106,47 @@
                     <div class="title-box-2">
                       <h5 class="title-left">
                         About me
+                        <style>
+    strong {
+      font-weight: bold !important;
+    }
+  </style>
+</head>
+<body>
                       </h5>
                     </div>
                     <p class="lead">
  
-<p class="lead" style="text-align: justify;">
-  I earned my <strong>MS in Electrical and Computer Engineering</strong> from the 
+<style>
+  .lead {
+    text-align: justify;
+    font-family: Georgia, serif; /* Change font style here */
+    font-size: 16px;
+    line-height: 1.6;
+    color: #222; /* softer black for readability */
+  }
+</style>
+
+<p class="lead">
+  I earned my <strong>MSc</strong> in <strong>Electrical and Computer Engineering</strong> from the 
   <strong>University of California, Irvine (UCI)</strong> with a GPA of <strong>3.95</strong> (2023), 
-  following my <strong>BS in Electrical Engineering</strong> with a GPA of <strong>3.04</strong> (2019) from the 
+  following my <strong>BSc in Electrical Engineering</strong> with a GPA of <strong>3.04</strong> (2019) from the 
   <strong>University of Engineering and Technology (UET), Lahore</strong>. 
-  Currently, I am working as a remote <strong>AI Research Scientist</strong> at a </strong>California-based healthcare technology company, 
-  Integrated Medical Sensors</strong>. I am also serving as a <strong>Lecturer</strong> in the 
+  Currently, I am working as a remote <strong>AI Research Scientist</strong> at a 
+  <strong>California-based healthcare technology company, Integrated Medical Sensors</strong>. 
+  I am also serving as a <strong>Lecturer</strong> in the 
   <strong>Department of AI and Data Science</strong> at <strong>FAST National University, Lahore</strong>.
 </p>
 
-<p class="lead" style="text-align: justify;">
+<p class="lead">
   With over <strong>three years of AI research experience</strong> through remote assistantships at 
   <strong>Purdue University</strong>, the <strong>University of Oklahoma</strong>, 
   <strong>UC Irvine</strong>, and <strong>Integrated Medical Sensors (IMS), California</strong>, 
   I am dedicated to pursuing a <strong>PhD at the intersection of data science, machine learning, and AI</strong>, 
   advancing as both a <strong>researcher</strong> and <strong>innovator</strong> to deliver 
-  impactful contributions to the field.
+  impactful contributions to this field.
 </p>
+
 
 
 
@@ -143,7 +179,7 @@
                 <div class="service-content">
                   <h2 class="s-title">Research Experience</h2>
 
-
+                   
                   <p class="s-description text-center">
                     <p style="color:blue">The University of Oklahoma, Oklahoma, USA (remotely) </p>
                     <p style="color:black">Oct 2024 -- March 2025 (part-time)</p>
@@ -173,8 +209,8 @@
                     <p style="color:blue">UC Irvine, California, USA (remotely) </p>
                     <p style="color:black">Dec 2023 -- Feb 2024</p>
                     <ul>
-                      <li style="text-align:left;">Researched college students’ perceptions of generative AI across disciplines by designing and administering surveys, then analyzing responses for actionable insights.</li>
-                      <li style="text-align:left;">Evaluated and compared the performance of Large Language Models (LLMs), including ChatGPT 4.0 and Google Bard, across diverse tasks to highlight their strengths and limitations.</li>
+                      <li style="text-align:left;">Researched college students’ perceptions of generative AI across disciplines by designing and administering surveys</li>
+                      <li style="text-align:left;">Evaluated and compared the performance of Large Language Models (LLMs), including ChatGPT 4.0 and Google Bard, across diverse tasks to highlight their strengths and limitations</li>
                      <li style="text-align:left; font-weight: bold;">Outcome: GenAI-101: What Undergraduate Students Need to Know and Actually Know About Generative AI, EDWorkingPapers, 2025</li>
                     </ul>
                   </p>
@@ -206,8 +242,8 @@
  InceptionNet), achieving 95.3% detection accuracy and 92% Dice coefficient
 </li>
                       <li style="text-align:left;">Supervised senior-year project on fetal anomaly detection in ultrasound (GoogleNet, MobileNetV2,
- ResNet-50, and Vision Transformers), achieving 96.8% accuracy</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: Bachelor's Thesis </li>
+ ResNet-50, and Vision Transformers), achieving 96.8% accuracy and 96.8% F1 score</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: Research culminated in students’ Bachelor’s Thesis </li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
@@ -712,7 +748,7 @@
                     <p style="color:blue">Lecturer</p>
                     <ul>
                       <!-- <li style="text-align:left;">Lecturer</li> -->
-                      <li style="text-align:left;">Department of AI and Data Science, FAST School of Computing, Lahore</li>
+                      <li style="text-align:left;">Department of AI and Data Science, FAST National University, Lahore</li>
                       <li style="text-align:left;">Jan 2024 – Present</li>
                       <li style="text-align:left;">Courses: Data Mining, Data Science, Big Data Analytics, Data Analysis and Visualization</li>
                     </ul>
@@ -769,7 +805,7 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           Winner, AWS re:inevnt All Builders travel grant to attend AWS Annual Conference, USA (2022)
         <p class="s-description text-center mt-3">
           <a href="https://drive.google.com/file/d/1l9arXMVwVtIUGwc5mqiafI0K1nVKLOLd/view?usp=sharing" 
@@ -788,9 +824,8 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           Featured on United Nations Development Program Pakistan, Youtube, Twitter Account and Web page as a successful Women in Technology (2022)
-        </h2>
         <p class="s-description text-center mt-3">
           <a href="https://www.youtube.com/watch?v=t53Dg6WbNUg" 
              class="btn btn-primary" target="_blank" rel="noopener noreferrer">
@@ -806,7 +841,8 @@
               <div class="service-box">
                   <div class="service-ico">
                   <div class="service-content">
-                    <h2 class="s-title" style="text-transform: none;">Winner, IEEE Communication Society, Santa Clara Valley Chapter Award to present paper at IEEE GHTC (2021)</h2>
+                    <h2 class="s-title" style="text-transform: none; font-weight: normal;">
+                      Winner, IEEE Communication Society, Santa Clara Valley Chapter Award to present paper at IEEE GHTC (2021)</h2>
                    </h2>
         <p class="s-description text-center mt-3">
           <a href="https://drive.google.com/file/d/1WQVoaZWfnWWsM998SHONtKIwZQOK25r4/view" 
@@ -823,7 +859,7 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           Finalist, Project Competition, IEEE YESIST’12 Conference, among teams from 16+ countries, India (2020)
         </h2>
         <p class="s-description text-center mt-3">
@@ -842,7 +878,7 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           2nd Place, IEEE IAS Humanitarian Project Competition, among teams from 20+ countries, USA (2020)
         </h2>
         <p class="s-description text-center mt-3">
@@ -860,7 +896,7 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           Finalist, IEEE HTC Conference, Project Competition, among teams from 10+ countries, Indonesia (2019)
         </h2>
         <p class="s-description text-center mt-3">
@@ -893,8 +929,9 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
-          Organizing free-of-cost, remote 6-weeks comprehensive Python and AI bootcamps to train 150+ underprivileged students nationwide (2025)
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
+          Leading a team of 9 trainers to organize free, remote 6-week Python and AI bootcamp, providing training to
+150+ underprivileged students nationwide, Pakistan (2025)
         </h2>
         <p class="s-description text-center mt-3">
           <a href="https://www.facebook.com/iCodeguru/videos/765021723146669/" 
@@ -910,8 +947,9 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
-          Organizing free-of-cost, remote 6-weeks Generative AI courses to train 200+ underprivileged students across Pakistan (2025)
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
+          Serving as Mentor and Instructor for remote 6-week Generative AI courses, training 200+ underprivileged
+students per course across Pakistan (2025)
         </h2>
         <p class="s-description text-center mt-3">
           <a href="https://drive.google.com/file/d/1-iLYtrkxPUS2aft763DDpLeInEOfQhTU/view" 
@@ -928,10 +966,10 @@
   <div class="service-box">
     <div class="service-ico">
       <div class="service-content">
-        <h2 class="s-title" style="text-transform: none;">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
           Conducting in-person Build with AI workshops using Google Cloud Platform, engaging 300+ students per workshop from universities across Pakistan (2025)
         <p class="s-description text-center mt-3">
-          <a href="https://www.linkedin.com/posts/gdgcloudlahore_cloudnextextended-speakerspotlight-cloudnext2025-activity-7350799408625569792-dfOA?utm_source=share&utm_medium=member_desktop&rcm=ACoAACCxWiYBUMaujlQnobZCB1bQiZ4Wbw_U1IM" 
+          <a href="https://youtube.com/shorts/Z2gWgOtDkrc" 
              class="btn btn-primary" target="_blank" rel="noopener noreferrer">
              View
           </a>
@@ -940,26 +978,58 @@
   </div>
 </div>
 
-      <!-- Government schools + mentoring -->
+ <div class="col-12 col-md-6 col-lg-4">
+  <div class="service-box">
+    <div class="service-ico">
+      <div class="service-content">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
+Delivered talks at the Generative AI Conference by Provincial government Safe City Authority, helping officials explore Generative AI applications to make cities safer, Pakistan (2025)
+        <p class="s-description text-center mt-3">
+          <a href="https://youtu.be/uo1ywt4zIAQ" 
+             class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+             View
+          </a>
+        </p>
+      </div></div>
+  </div>
+</div>
+
+ <div class="col-12 col-md-6 col-lg-4">
+  <div class="service-box">
+    <div class="service-ico">
+      <div class="service-content">
+        <h2 class="s-title" style="text-transform: none; font-weight: normal;">
+Chairperson, Women in Engineering Committee IEEE UET, organized counseling sessions, career development workshops for female students of UET (2018 - 2019)
+        <p class="s-description text-center mt-3">
+          <a href="https://drive.google.com/file/d/1rL2tB70z-X_D8ihzKdjfpgBLi2r0X78g/view?usp=sharing" 
+             class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+             View
+          </a>
+        </p>
+      </div></div>
+  </div>
+</div>
+
+<!-- Government schools + mentoring -->
+   <!-- Conferences -->
       <div class="col-12 mt-3">
         <div class="service-box">
           <div class="service-content">
             <div class="row">
               <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                 <div class="pro_img">
-                  <img class="w-100 rounded-3" height="370" src="assets/img/ach2.jpeg" alt="Government School Workshops">
+                  <img class="w-100 rounded-3" height="370" src="assets/img/ach2.jpeg" alt="Conference Organization">
                 </div>
               </div>
               <div class="col-12 col-lg-6 d-flex align-items-center">
                 <p class="text-start" style="color: black;">
-                  Conducted <b>programming workshops in government schools across Lahore</b>, and led <b>mentorship & counseling sessions</b> for female students as <b>Chairperson, IEEE Women in Engineering (WIE) UET</b>. Also volunteered with the <b>Pakistan Students Welfare Organization</b> to support student growth (2018 - 2019)
-                </p>
+                  Led <b>10+ python and AI workshops</b>, at UET Lahore and at UC Irvine as <b>Chairperson WIE UET</b> and <b>Mentor at AI@UCI Club</b> (2018, 2022)
               </div>
             </div>
           </div>
         </div>
       </div>
-
+      
       <!-- Conferences -->
       <div class="col-12 mt-3">
         <div class="service-box">
@@ -972,7 +1042,7 @@
               </div>
               <div class="col-12 col-lg-6 d-flex align-items-center">
                 <p class="text-start" style="color: black;">
-                  Played an active role in <b>organizing national and international conferences</b>, including <b>ICOSST 2018</b> and <b>APES 2017</b>, held at UET Lahore.
+                   Organzed </b>national and international conferences</b>, including <b>APES 2017</b> and <b>SPECTRUM 2017</b>, held at UET Lahore, 2017
                 </p>
               </div>
             </div>
@@ -992,7 +1062,7 @@
               </div>
               <div class="col-12 col-lg-6 d-flex align-items-center">
                 <p class="text-start" style="color: black;">
-                  Volunteered in <b>academic event management</b>, assisting with speaker coordination and logistics for university-level conferences.
+                  Volunteered in <b>academic event management</b>, assisting with speaker coordination and logistics for university-level conferences, UET Lahore, 2017
                 </p>
               </div>
             </div>
@@ -1011,7 +1081,7 @@
               </div>
               <div class="col-12 col-lg-6 d-flex align-items-center">
                 <p class="text-start" style="color: black;">
-                  Supported <b>university-level conferences and symposiums</b>, contributing to academic outreach and knowledge exchange.
+                  Supported <b>university-level conferences and symposiums</b>, contributing to academic outreach and knowledge exchange, UET Lahore, 2017
                 </p>
               </div>
             </div>
